<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorGrey">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGreen"
        android:elevation="7dp"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/darkGreen"
        tools:ignore="Overdraw" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context=".activities.RateNotificationActivity">

            <TextView
                android:id="@+id/tvCurrency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif"
                android:text="@string/select_currency"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/spCurrency"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvNotification" />

            <TextView
                android:id="@+id/tvNotification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/notification_on_off"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/tvCurrency"
                app:layout_constraintEnd_toStartOf="@+id/switch1"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tvCondition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/select_condition"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/spCondition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spBuySell" />

            <TextView
                android:id="@+id/tvValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/enter_value"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/etValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spCondition" />

            <TextView
                android:id="@+id/tvPKR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/pkr"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/etValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/etValue"
                app:layout_constraintTop_toTopOf="@+id/etValue" />

            <TextView
                android:id="@+id/tvBuySell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/select_buy_sell"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/spBuySell"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spCurrency" />

            <Spinner
                android:id="@+id/spBuySell"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:spinnerMode="dropdown"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="@drawable/input_back"
                android:popupBackground="@drawable/input_back"
                app:layout_constraintBottom_toTopOf="@+id/tvCondition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBuySell" />

            <Spinner
                android:id="@+id/spCondition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:spinnerMode="dropdown"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="@drawable/input_back"
                android:popupBackground="@drawable/input_back"
                app:layout_constraintBottom_toTopOf="@+id/tvValue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCondition" />

            <Spinner
                android:id="@+id/spCurrency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif"
                android:spinnerMode="dropdown"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                android:popupBackground="@drawable/input_back"
                android:background="@drawable/input_back"
                app:layout_constraintBottom_toTopOf="@+id/tvBuySell"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCurrency" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:fontFamily="sans-serif"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tvNotification"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvNotification"
                app:layout_constraintTop_toTopOf="@+id/tvNotification" />

            <EditText
                android:id="@+id/etValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input_back"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:inputType="numberDecimal"
                android:textColor="@color/darkGreen"
                android:textSize="17sp"
                android:textStyle="bold"
                android:maxLength="16"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toStartOf="@+id/tvPKR"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvValue" />

            <android.widget.Button
                android:id="@+id/button"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/btn_back"
                android:fontFamily="sans-serif"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etValue" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>